--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "portfolio",
+  "name": "my_portfolio",
   "version": "1.0.0",
   "description": "Responsive portfolio website",
   "main": "index.js",
+  "homepage": "https://pkrupicki.github.io/my_portfolio",
   "scripts": {
-    "sass": "node-sass -w scss/ -o dist/css/ --recursive"
+    "sass": "node-sass -w scss/ -o dist/css/ --recursive",
+    "deploy": "gh-pages -d dist"
   },
   "author": "Paweł Krupicki",
   "license": "ISC",
